# udp_recorder

./: .coveragerc  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
recorder/: record_udp_stream.py  replay_udp_stream.py  utils.py
tests/: test_record.py  test_replay.py
udprecorder/: record_udp_stream.py  replay_udp_stream.py  utils.py
